--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -16,6 +16,7 @@
     {{{ body }}}
 
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+    <script src="/js/script.js"></script>
 </body>
 
 </html>
