--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,6 +1,61 @@
 <div class="container">
-    <div class="row">
-        <h1 class="text-center">ede burgah</h1>
-
+    <div class="row container">
+        <div class="col-md-12 text-center" id="top-bar">
+            <h1 id="logoText">edeburgah</h1>
+        </div>
+        <div class="col-md-7 text-center" class="task" id="notEatenCard">
+            <h2 class="header">Available burgers: </h2>
+            <br>
+            <div class="row">
+                {{#each burger_data}}
+                {{#unless this.devoured}}
+                <div class="col-md-9 text-center">
+                    <h4>
+                        <pre>{{this.id}}. {{this.burger_name}}
+					</pre>
+                    </h4>
+                    <!-- {{this.Date}} -->
+                </div>
+                <div class="col-md-3 text-center" id="buttonParent">
+                    <form class="devour-form button-size" style="
+                    display: flex; 
+                    flex-direction: column;
+                    justify-content: flex-start;
+                    "> <button type="submit" class="btn btn-default" id="devourButton">Devour
+                            it!</button>
+                        <input input type="hidden" class="burger_id" type="text" value={{this.id}}><br>
+                    </form>
+                </div>
+                {{/unless}}
+                {{/each}}
+            </div>
+        </div>
+        <div class="offset-md-1 col-md-4 text-center" class="task" id="eatenCard">
+            <h2 class="header">Devoured Burgers: </h2>
+            <br>
+            {{#each burger_data}}
+            {{#if this.devoured}}
+            <input class="form-control" type="text" placeholder="{{this.id}} . {{this.burger_name}}" readonly>
+            {{/if}}
+            {{/each}}
+        </div>
     </div>
 </div>
+<br>
+<br>
+
+<div class="container">
+    <div class="row">
+        <div class="col-md-12 text-center enter_section">
+            <form action="/burgers/create" method="POST">
+                <input type="text" class="form-control" name="burger_name" value="" id="enter_text">
+                <br>
+                <button type="submit" class="btn btn-primary" id="text-enter-button">Submit</button>
+            </form>
+            <br>
+            <p id="instructions">Enter a burger you want to eat Click the "Submit" button.</p>
+        </div>
+    </div>
+</div>
+
+<link rel="stylesheet" href="./css/style.css">
