changed the word burgers to uppercase to match other side

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -4,7 +4,7 @@
             <h1 id="logoText">edeburgah</h1>
         </div>
         <div class="col-md-7 text-center" class="task" id="notEatenCard">
-            <h2 class="header">Available burgers: </h2>
+            <h2 class="header">Available Burgers: </h2>
             <br>
             <div class="row">
                 {{#each burger_data}}
